调整下图文消息格式